--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "vite": "^2.9.9"
-  }
+  },
+  "engines": {
+    "node": "14.x"}
 }
