--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "start": "node server.js",
     "dev": "vite",
-    "build": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -18,5 +20,6 @@
     "vite": "^2.9.9"
   },
   "engines": {
-    "node": "14.x"}
+    "node": "14.x"
+  }
 }
